add image folder

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1 class="heading">Hear i start my life journey</h1>
   <p><strong class="name">Mutebi Pavel</strong> are my names.</p>
-<p>Welcome to my first webpage!</p>
- <img src="image/pavel.jpg" alt="image">
+<p><strong class="intro">Welcome to my first webpage!</strong></p>
+ <img src="../pavel-webpage/images/pavel.jpg"width="1270" height="728" alt="Swimming is one of my hobbies">
   <p class="header">These are some of the projects have done sofar:-</p>
   <ol>
     <li class="exa">This ws my very first trial website <a href="https://github.com/Mutebip/helo-world.git">Helo world</a></li>
